update color codes to fix issues with color contrast related accessibility issues, for #7

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -72,10 +72,10 @@ $spacing: (
 /// Colors
 ////
 
-$blue-dark: #407ab1 !default;
-$blue: #75a3cd !default;
+// $blue-dark: #407ab1 !default;
+$blue: #407AB0 !default;
 $blue-light: #acd6eb !default;
-$brown: #b1850b !default;
+$brown: #967008 !default;
 $green: #537e2c !default;
 $light-green: #a7c504 !default;
 $teal: #2dc2ab !default;
@@ -103,7 +103,7 @@ $color-primary-dark: $navy-dark !default;
 $color-access: $blue;
 $color-academic-excellence: $green;
 $color-experience: $brown;
-$color-unrestricted-giving: #1f9f8b;
+$color-unrestricted-giving: #1A8575;
 $color-capital-projects: $navy-dark;
 
 ////
